# tts-server

./: .gitignore  README.md  pyproject.toml
scripts/: tts_clipboard_linux.sh  tts_clipboard_mac.sh
src/tts_server/: server.py
